# WaveStack

./: .env.example  .gitignore  Caddyfile  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: deploy-vm.yml
apps/frontend/: Dockerfile  fancy_writing.json  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/frontend/public/: robots.txt  sitemap.xml
apps/frontend/src/: App.test.tsx  App.tsx  api.ts  library-refresh.ts  main.tsx  song-format.ts  styles.css
coverage-dashboard/: README.md  coverage-sources.json  index.html  package.json  render-dashboard.mjs
docs/: architecture.md  azure-vm.md  roadmap.md  security.md  testing.md
infra/azure/: README.md
infra/azure/bicep/: main.bicep
infra/docker/: README.md
infra/kubernetes/azure/: README.md  storage-class.yaml
infra/kubernetes/base/: analytics-service.yaml  audio-ai-service.yaml  configmap.yaml  (+9 more)
infra/neo4j/: README.md  recommendations.cypher
infra/pki/: README.md
infra/postgres/: seed.sql
infra/rabbitmq/: definitions.json
scripts/powershell/: Backup-Postgres.ps1  Deploy-Azure.ps1  Maintain-Kubernetes.ps1  New-InternalCertificate.ps1
services/analytics-service/: Dockerfile
services/audio-ai-service/: Dockerfile  pyproject.toml
services/audio-ai-service/app/: audio_processor.py  main.py  rabbitmq_worker.py  recommender.py
services/audio-ai-service/tests/: test_audio_processor.py  test_recommender.py
services/graphql-api/: Dockerfile  package-lock.json  package.json
tests/integration/: README.md  smoke-test.mjs
(+96 files in other folders)
