[project]
name = "wavestack-audio-ai-service"
version = "0.1.0"
description = "FastAPI audio processing and AI recommendation service for WaveStack."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112.0",
  "uvicorn[standard]>=0.30.5",
  "pydantic>=2.8.2",
  "pika>=1.3.2",
  "mutagen>=1.47.0",
  "numpy>=2.0.1",
  "scikit-learn>=1.5.1"
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
